"Getting Started" guide

--- a/Website/download.html
+++ b/Website/download.html
@@ -57,7 +57,7 @@
 			</header><!-- end header -->
 			
 			
-			<div id="action" style="padding-top: 30px; min-height: 600px">
+			<div id="action" style="padding: 30px 0px">
 				<div class="inner-wrap">
 					<div class="column-container">
 						<div class="column three-fourths">
@@ -80,6 +80,21 @@
 				</div>
 			</div>
 			
+			<div id="main">
+				<div class="inner-wrap">
+					<h2>Getting Started</h2>
+					<h3>Installation</h3>
+					<p>To install, simply click the "Download Extension" link above and click "Install".  If you have the "Open Safe Files" option disabled, double-click the extension in your "Downloads" folder and click "Install".</p>
+					
+					<h3>Usage</h3>
+					<p>After installation, a new button will be added to your toolbar.  If any images are available on the page you are viewing, clicking this button will bring up the image gallery.</p>
+					<h3>Preferences</h3>
+					<p>To access preferences for the extension, including minimum size of images to be displayed, image types to be displayed, and length of slides in slideshow mode, click the "Safari" menu and select "Preferences".  Go to the "Extensions" tab, and you can manage preferences for all extensions, including QuickLook Photo Gallery.  You can also disable or uninstall the extension from this preference pane.</p>
+					
+					<h3>Removal</h3>
+					<p>To remove the extension, visit the Preferences as described above.  There you can temporarily disable or permanently uninstall the extension</p>
+				</div>
+			</div>
 		</div><!-- end #wrap -->
 		
 		
