Link "Learn more" buttosn to anchor tag

--- a/Website/index.html
+++ b/Website/index.html
@@ -72,7 +72,7 @@
 									<p>
 										Turn an unorganized list of pictures on a website into an easy to navigate photo gallery.  Inspired by the QuickLook functionality built into Mac OS X, this plugin automatically displays all large inline and linked images.  Includes true full-screen support.
 									</p>
-									<a class="button button-arrow">Learn more<span class="icon"></span></a>
+									<a class="button button-arrow" href="#info">Learn more<span class="icon"></span></a>
 								</div><!-- end .slide-content -->
 								<div class="post-image-container">
 									<img src="images/home-520x340.jpg" width="520" height="340" alt="image" class="featured-image" />
@@ -97,7 +97,7 @@
 										<small>Easily customized to</small>
 										only display the images you want
 									</h2>
-									<a class="button button-arrow">Learn more<span class="icon"></span></a>
+									<a class="button button-arrow" href="#info">Learn more<span class="icon"></span></a>
 								</div><!-- end .slide-content -->
 								<div class="post-image-container">
 									<img src="images/home-520x340-b.jpg" width="520" height="340" alt="image" class="featured-image" />
@@ -131,6 +131,7 @@
 				</div>
 			</div>
 			
+			<a name="info"></a>
 			<div id="main">
 				<div class="inner-wrap">
 				
