Link to download page instead of to plugin so users have some quick instructions

--- a/Website/index.html
+++ b/Website/index.html
@@ -122,7 +122,7 @@
 							<p class="no-margin">Installs in seconds on Safari 5.0 or newer. Snow Leopard, Lion, and Windows compatible.</p>
 						</div><!-- end .column -->
 						<div class="column fourth">
-							<a class="button button-arrow" href="http://s3.amazonaws.com/qlphotogallery/download/QuickLookPhotoGallery.safariextz">
+							<a class="button button-arrow" href="download.html">
 								Download Extension
 								<span class="icon"></span>
 							</a>
